[gd_scene load_steps=4 format=3 uid="uid://dtok74cnus8b6"]

[ext_resource type="Script" path="res://scripts/question.gd" id="1_1scps"]
[ext_resource type="Texture2D" uid="uid://cy2jh8o6b8rh1" path="res://sprite/samplequestion.png" id="1_vji46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4sbc"]
size = Vector2(750, 250)

[node name="question" type="Node2D"]
position = Vector2(549, 258)

[node name="question" type="Area2D" parent="."]
script = ExtResource("1_1scps")

[node name="shape" type="CollisionShape2D" parent="question"]
shape = SubResource("RectangleShape2D_a4sbc")

[node name="quant1" type="Button" parent="."]
offset_left = -318.0
offset_top = -86.0
offset_right = -310.0
offset_bottom = -78.0
scale = Vector2(13.32, 5.16)
metadata/_edit_use_anchors_ = true

[node name="quant2" type="Button" parent="."]
offset_left = 4.0
offset_top = -87.0
offset_right = 12.0
offset_bottom = -79.0
scale = Vector2(15.4708, 5.6037)

[node name="tool" type="Button" parent="."]
offset_left = -151.0
offset_top = -17.0
offset_right = -143.0
offset_bottom = -9.0
scale = Vector2(10.2876, 5.70219)

[node name="Samplequestion" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_vji46")

[connection signal="pressed" from="quant1" to="question" method="_on_quant_1_pressed"]
[connection signal="pressed" from="quant2" to="question" method="_on_quant_2_pressed"]
[connection signal="pressed" from="tool" to="question" method="_on_tool_pressed"]
